[package]
authors = ["Jacob Rothstein <hi@jbr.me>"]
categories = ["web-programming::http-server", "web-programming", "database"]
description = "sqlx session store for async-session"
documentation = "https://docs.rs/async-sqlx-session"
edition = "2018"
keywords = ["sessions", "sqlx", "sqlite", "postgres", "mysql"]
license = "MIT OR Apache-2.0"
name = "async-sqlx-session"
readme = "README.md"
repository = "https://github.com/jbr/async-sqlx-session"
version = "0.4.1"

[package.metadata.docs.rs]
features = ["pg", "sqlite", "mysql", "async_std_native_tls", "async_std_rustls", "tokio_native_tls", "tokio_rustls"]

[features]
async_std_native_tls = ["sqlx/runtime-async-std-native-tls", "async-std"]
async_std_rustls = ["sqlx/runtime-async-std-rustls", "async-std"]
mysql = ["sqlx/mysql", "sqlx/json"]
pg = ["sqlx/postgres", "sqlx/json"]
sqlite = ["sqlx/sqlite"]
tokio_native_tls = ["sqlx/runtime-tokio-native-tls"]
tokio_rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
async-session = "3.0.0"
async-std = {version = "1.9.0", optional = true}
sqlx = {version = "0.6.0", features = ["chrono"]}

[dev-dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}

[dev-dependencies.sqlx]
features = ["chrono", "runtime-async-std-native-tls"]
version = "0.6.0"
